--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		
 		<repository>
 		    <id>nexusRepo</id>
-		    <url>http://44.202.251.20:8081/repository/flm-releases/</url>
+		    <url>http://3.235.94.133:8081/repository/myrepo/</url>
 		</repository>
   	</distributionManagement>
 	
